syntax = "proto2";
package master_server;

enum message_type
{   
    user_login_req = 10001;   
    user_login_res = 10002;   
}

message user_login_req
{
    required    bytes user_id = 1;               // 用户id(Guid)
    required    string  user_name = 2;                // 用户名
}

message user_login_res
{
    required    int32    res = 1;                    //
    required    bytes    user_id = 2;               // 用户id(Guid)
}
